k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emerald-api
  namespace: emerald
spec:
  selector:
    app: emerald-api
  ports:
    - port: 80
      targetPort: 8000
      name: http
  type: ClusterIP
